# wasm-component-tutorial

./: calculator.wit
adder/: Cargo.toml
adder/src/: lib.rs
calculator/: Cargo.toml
calculator/src/: lib.rs
command/: Cargo.toml
command/src/: main.rs
