[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.22.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "docs:calculator"

[package.metadata.component.target]
path = "../calculator.wit"
world = "adder"

[package.metadata.component.dependencies]
